flickrs-k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flickrs-static
  labels:
    app: flickrs-static
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flickrs-static
  template:
    metadata:
      labels:
        app: flickrs-static
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: flickrs-static
        imagePullPolicy: Always
        image: registry.gitlab.com/etrovub/smartnets/flickrs/nginx-static:master
        livenessProbe:
          httpGet:
            path: /index.html
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flickrs-api
  labels:
    app: flickrs-api
spec:
  replicas: 1
  # As long as we use sqlite, we need Recreate instead of roll-over
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: flickrs-api
  template:
    metadata:
      labels:
        app: flickrs-api
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: flickrs-api
        imagePullPolicy: Always
        image: registry.gitlab.com/etrovub/smartnets/flickrs/apiserver:master
        livenessProbe:
          httpGet:
            path: /api/setup
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 3
        volumeMounts:
        - name: flickrs-storage
          mountPath: /var/lib/flickrs
      volumes:
        - name: flickrs-storage
          persistentVolumeClaim:
            claimName: flickrs-storage
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flickrs-api
  name: flickrs-api
spec:
  clusterIP: None
  ports:
  - port: 8000
    name: web
  selector:
    app: flickrs-api
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flickrs-static
  name: flickrs-static
spec:
  clusterIP: None
  ports:
  - port: 80
    name: web
  selector:
    app: flickrs-static



# Virtual hosting: nginx configurations
---
# Virtual hosting: nginx
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flickrs-virtual-host
  labels:
    app: flickrs-virtual-host
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flickrs-virtual-host
  template:
    metadata:
      labels:
        app: flickrs-virtual-host
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.3
        ports:
        - containerPort: 80
          name: flickrs-virtual
        volumeMounts:
        - name: nginx-confd
          mountPath: "/etc/nginx/conf.d/"
          readOnly: true
      volumes:
      - name: nginx-confd
        secret:
          secretName: nginx-confd
---
# Virtual hosting service
apiVersion: v1
kind: Service
metadata:
  name: flickrs-virtual-host
  labels:
    app: flickrs-virtual-host
spec:
  ports:
  - port: 80
    name: flickrs-virtual
  clusterIP: None
  selector:
    app: flickrs-virtual-host
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-flickrs
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.org/client-max-body-size: "20m"
    kubernetes.io/ingress.class: "nginx-public"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-production
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: "flickrs.opencloudedge.be"
    http:
      paths:
      - backend:
          serviceName: flickrs-virtual-host
          servicePort: 80
  tls:
  - hosts:
    - 'flickrs.opencloudedge.be'
    secretName: flickrs-tls
